# dnd_agent

./: CLAUDE (1).md  Dockerfile  POSTGRESQL_INSTALL.md  README.md  alembic.ini  claude2.md  dnd_rag.db  docker-compose.yml  package-lock.json  package.json  pyproject.toml
app/: main.py
app/agents/: __init__.py  handlers.py  router.py  types.py
app/api/: __init__.py  campaigns.py  modules.py  query.py  state.py
app/core/: __init__.py  config.py  logging.py  tracing.py
app/db/: __init__.py  database.py  models.py
app/db/migrations/: env.py  script.py.mako
app/db/migrations/versions/: 001_initial_migration.py
app/ingestion/: __init__.py  chunker.py  embedder.py  entity_extractor.py  ingestion_service.py  manifest_validator.py
app/llm/: __init__.py  provider.py
app/rag/: __init__.py  pipeline.py  reranker.py  retrieval.py
app/schemas/: __init__.py  campaign.py  module.py  query.py  session.py  state.py
app/state/: __init__.py  manager.py
examples/modules/sample_forgotten_forest/data/: monsters.json  npcs.json
examples/modules/sample_forgotten_forest/docs/: adventure.md  rules.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/campaigns/[id]/: page.tsx
frontend/app/state/: page.tsx
frontend/components/: ChatPanel.tsx  CitationSidebar.tsx
frontend/lib/: api.ts
pgvector_extracted/: readme.txt
tests/: conftest.py
tests/fixtures/: eval_set.json
tests/fixtures/modules/sample_forgotten_forest/: module.yaml
tests/integration/: test_api.py
tests/unit/: test_chunking.py  test_router.py  test_state_patch.py
types/: index.ts
